--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>时光 Site not here -贤柳阁 | LuoV</title>
 		<script type="text/javascript" src="assets/js/js.js"></script>
 		<script type="text/javascript" src="assets/js/calendar.min.js"></script>
-		<!-- <script type="text/javascript" src="assets/js/jump.js"></script> -->
+		<script type="text/javascript" src="assets/js/jump.js"></script>
 		<!-- Favicon and touch icons -->
 		<link rel="shortcut icon" href="assets/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
