--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>时光 Site not here -贤柳阁 | LuoV</title>
+		<!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
 		<script type="text/javascript" src="assets/js/js.js"></script>
 		<script type="text/javascript" src="assets/js/calendar.min.js"></script>
-		<script type="text/javascript" src="assets/js/jump.js"></script>
+		<!-- <script type="text/javascript" src="assets/js/jump.js"></script> -->
 		<!-- Favicon and touch icons -->
 		<link rel="shortcut icon" href="assets/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
@@ -213,7 +214,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 footer-copyright">
-						&copy;2018
+						The time of the show is Beijing time. &copy;2018
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
 		 			<!--<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
  36010202000163</a>号</span></span>-->
