请求网络时间

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<!-- CNZZ统计代码 -->
 		<script type="text/javascript">
 			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-			document.write(unescape("%3Cspan style='display:none;'  id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
+			document.write(unescape("%3Cspan style='display:none;'  id='cnzz_stat_icon_1274914062'%3E%3C/span%3E%3Cscript src='" +
+				cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1274914062' type='text/javascript'%3E%3C/script%3E"));
 		</script>
 		<!-- 百度统计代码 -->
 		<script>
@@ -76,11 +77,11 @@
 				<div class="container">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-						<span class="sr-only">Site move to new address</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
+							<span class="sr-only">Site move to new address</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
 						<a class="navbar-brand" href="index.html">Eternal charm, Endless sound.</a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
@@ -88,10 +89,10 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li>
 								<span class="li-text">
-								<!--Eternal charm, Endless sound.-->
-								<!--2018/11/07 12:12:12<br>
+									<!--Eternal charm, Endless sound.-->
+									<!--2018/11/07 12:12:12<br>
 								戊戌狗年 九月三十 -->
-							</span>
+								</span>
 								<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
 								<!--<span class="li-social">
 								<a href="#"><span class="social_facebook"></span></a>
@@ -110,11 +111,12 @@
 					<div class="row">
 						<div class="col-sm-8 text">
 							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-							We moved to the <strong>New Address</strong>
-						</h1>
+								We moved to the <strong>New Address</strong>
+							</h1>
 							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
 								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click the icon below to access the new address.We have been working on the new domain for
+									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click
+									the icon below to access the new address.We have been working on the new domain for
 								</p>
 							</div>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
@@ -163,7 +165,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 		<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
 
@@ -215,8 +216,9 @@
 				<div class="row">
 					<div class="col-sm-12 footer-copyright">
 						The time of the show is Beijing time. &copy;2018
-						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
-		 			<!--<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a
+							 href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
+							<!--<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
  36010202000163</a>号</span></span>-->
 						</span>
 					</div>
