--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
 		<script type="text/javascript" src="assets/js/js.js"></script>
 		<script type="text/javascript" src="assets/js/calendar.min.js"></script>
-		<!-- <script type="text/javascript" src="assets/js/jump.js"></script> -->
+		<script type="text/javascript" src="assets/js/jump.js"></script>
 		<!-- Favicon and touch icons -->
 		<link rel="shortcut icon" href="assets/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
