--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 footer-copyright">
-						The time of the show is Beijing time. &copy;2018
+						<!-- The time of the show is Beijing time. --> &copy;2018
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a
 							 href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
 							<!--<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
