--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
 		<script type="text/javascript" src="assets/js/js.js"></script>
 		<script type="text/javascript" src="assets/js/calendar.min.js"></script>
-		<script type="text/javascript" src="assets/js/jump.js"></script>
+		<!-- <script type="text/javascript" src="assets/js/jump.js"></script> -->
 		<!-- Favicon and touch icons -->
 		<link rel="shortcut icon" href="assets/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
@@ -161,6 +161,32 @@
 									</div>
 								</div>
 							</div>
+							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
+								<p>
+									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click
+									the icon below to access the new address.We have been working on the new domain for
+								</p>
+							</div>
+							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
+								<div class="years-wrapper">
+									<span class="years"></span> <span class="t-text">years /</span>
+								</div>
+								<!--<div class="mouths-wrapper">
+								<span class="mouths" ></span> <span class="t-text">months /</span>
+							</div>-->
+								<div class="days-wrapper">
+									<span class="days"></span> <span class="t-text">days /</span>
+								</div>
+								<div class="hours-wrapper">
+									<span class="hours"></span> <span class="t-text">hours /</span>
+								</div>
+								<div class="minutes-wrapper">
+									<span class="minutes"></span> <span class="t-text">minutes /</span>
+								</div>
+								<div class="seconds-wrapper">
+									<span class="seconds"></span> <span class="t-text">seconds</span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -169,11 +195,11 @@
 		<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
 
 		<!-- More info -->
-		<!-- <div class="features-container section-container">
+		<div class="features-container section-container">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>Some more info</h2>
+	                    <h2>关于网站</h2>
 	                    <div class="divider-1 wow fadeInUp"><span></span></div>
 	                </div>
 	            </div>
@@ -182,44 +208,44 @@
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_profile"></span>
 	                	</div>
-	                    <h3>Easy To Use</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+	                    <h3>域名迁移</h3>
+	                    <p>贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
                     </div>
                     <div class="col-sm-3 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_pencil"></span>
 	                	</div>
-	                    <h3>Responsive Design</h3>
+	                    <h3>贤柳阁</h3>
 	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
                     </div>
                     <div class="col-sm-3 features-box wow fadeInUp">
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_cogs"></span>
 	                	</div>
-	                    <h3>Bootstrap Engine</h3>
+	                    <h3>Mr.Luo</h3>
 	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
                     </div>
                     <div class="col-sm-3 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_pin"></span>
 	                	</div>
-	                    <h3>We're Here</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+	                    <h3>时光</h3>
+	                    <p>这个网站</p>
                     </div>
 	            </div>
 	        </div>
-        </div> -->
+        </div>
 
 		<!-- Footer -->
 		<footer>
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 footer-copyright">
-						<!-- The time of the show is Beijing time. --> &copy;2018
+						<!-- The time of the show is Beijing time. --> &copy; <span id="copyyear"></span> 
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved. &nbsp;&nbsp;<span style="font-size:80%;">赣ICP备<a
 							 href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
-							<!--<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
- 36010202000163</a>号</span></span>-->
+							<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center" rel="nofollow" >赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+ 36010202000163</a>号</span></span>
 						</span>
 					</div>
 				</div>
