--- a/index.html
+++ b/index.html
@@ -160,33 +160,7 @@
 										</a>
 									</div>
 								</div>
-							</div>
-							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
-								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click
-									the icon below to access the new address.We have been working on the new domain for
-								</p>
-							</div>
-							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
-								<div class="years-wrapper">
-									<span class="years"></span> <span class="t-text">years /</span>
-								</div>
-								<!--<div class="mouths-wrapper">
-								<span class="mouths" ></span> <span class="t-text">months /</span>
-							</div>-->
-								<div class="days-wrapper">
-									<span class="days"></span> <span class="t-text">days /</span>
-								</div>
-								<div class="hours-wrapper">
-									<span class="hours"></span> <span class="t-text">hours /</span>
-								</div>
-								<div class="minutes-wrapper">
-									<span class="minutes"></span> <span class="t-text">minutes /</span>
-								</div>
-								<div class="seconds-wrapper">
-									<span class="seconds"></span> <span class="t-text">seconds</span>
-								</div>
-							</div>
+							</div>							
 						</div>
 					</div>
 				</div>
@@ -199,7 +173,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features section-description wow fadeIn">
-	                    <h2>关于网站</h2>
+	                    <h2>关于网站 | More Info</h2>
 	                    <div class="divider-1 wow fadeInUp"><span></span></div>
 	                </div>
 	            </div>
@@ -209,28 +183,28 @@
 	                		<span aria-hidden="true" class="icon_profile"></span>
 	                	</div>
 	                    <h3>域名迁移</h3>
-	                    <p>贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
-                    </div>
-                    <div class="col-sm-3 features-box wow fadeInDown">
-	                	<div class="features-box-icon">
-	                		<span aria-hidden="true" class="icon_pencil"></span>
-	                	</div>
-	                    <h3>贤柳阁</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-                    </div>
-                    <div class="col-sm-3 features-box wow fadeInUp">
+	                    <p>贤柳阁 和 Mr.Luo 正在新的域名上工作。点击图标访问新地址。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
+					</div>
+					<div class="col-sm-3 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_cogs"></span>
 	                	</div>
 	                    <h3>Mr.Luo</h3>
-	                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+	                    <p>我的个人社交与信息平台展示窗口。<br/>A platform window to showcase my personal social and informational presence.</p>
+                    </div>
+                    <div class="col-sm-3 features-box wow fadeInUp">
+	                	<div class="features-box-icon">
+	                		<span aria-hidden="true" class="icon_pencil"></span>
+	                	</div>
+	                    <h3>贤柳阁 | Xian6ge</h3>
+	                    <p>个人博客，分享好听的歌曲、生活和技术。<br/>A personal blog to share great songs, life and technology.</p>
                     </div>
                     <div class="col-sm-3 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_pin"></span>
 	                	</div>
 	                    <h3>时光</h3>
-	                    <p>这个网站</p>
+	                    <p>当前网站。感受时光变换。<br/>Current website. Feel the passing of time.</p>
                     </div>
 	            </div>
 	        </div>
