--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							</h1>
 							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
 								<p>
-									贤柳阁 和 Mr.Luo 正在新的域名上工作。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click
+									贤柳阁 和 Mr.Luo 正运行在新的域名上。点击下面的图标访问新地址。<br> XianliuGe and Mr.Luo are working on the new domain name. <br>Click
 									the icon below to access the new address.We have been working on the new domain for
 								</p>
 							</div>
@@ -182,7 +182,7 @@
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_profile"></span>
 	                	</div>
-	                    <h3>域名迁移</h3>
+	                    <h3>域名迁移 | Domain migration</h3>
 	                    <p>贤柳阁 和 Mr.Luo 正在新的域名上工作。点击图标访问新地址。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
 					</div>
 					<div class="col-sm-3 features-box wow fadeInDown">
