--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 	                		<span aria-hidden="true" class="icon_profile"></span>
 	                	</div>
 	                    <h3>域名迁移 | Domain migration</h3>
-	                    <p>贤柳阁 和 Mr.Luo 正在新的域名上工作。点击图标访问新地址。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
+	                    <p>贤柳阁 和 Mr.Luo 已经迁移到了新的域名上。<br/>XianliuGe and Mr.Luo are working on the new domain name. </p>
 					</div>
 					<div class="col-sm-3 features-box wow fadeInDown">
 	                	<div class="features-box-icon">
