--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	                	<div class="features-box-icon">
 	                		<span aria-hidden="true" class="icon_pin"></span>
 	                	</div>
-	                    <h3>时光</h3>
+	                    <h3>时光 | Times</h3>
 	                    <p>当前网站。感受时光变换。<br/>This website. Feel the passing of time.</p>
                     </div>
 	            </div>
