--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 					<div class="row">
 						<div class="col-sm-12 text">
 							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-								<!-- We moved to the <strong>New Address</strong> -->
-								<p id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</p>
+								<strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong>
 							</h1>	
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 								<div class="years-wrapper">
@@ -137,14 +136,14 @@
 							</div>
 							<div class="description wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="2s">
 								<p>
-									Today is <span class="week">Sun.</span>, the <span class="dayth">0</span> day of this year.<span class="congratulations"></span><br>
-									今天是星期<span class="week">日</span><span id="lunarInfo"></span>。现在<span id="lunarTime">子初</span>。
+									Today is <span class="week">Sun.</span>  the <span class="dayth">0</span> day of this year.<span class="congratulations"></span><br>
+									今天是星期<span class="week">日</span><span id="lunarInfo"></span>。现在是<span id="lunarTime">子初</span>。
 								</p>
 							</div>
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
-									<div class="col-sm-12 features wow fadeIn">
-									    <p>贤柳阁 和 Mr.Luo 迁移到新的域名上，已经过去了：<br/>
+									<div class="col-sm-12 features wow fadeIn title">
+									    <p><strong>贤柳阁</strong> 和 <strong>Mr.Luo</strong> 迁移到新的域名上，已经过去了：<br/>
 										XianliuGe and Mr.Luo are working on the new domain name for: </p>
 									    <div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
 									    	<div class="years-wrapper">
@@ -234,6 +233,7 @@
  36010202000163</a>号</span></span>
 						</span>
 					</div>
+					<div class="myinfo"></div>
 					<div class="myinfo"></div>
 				</div>
 			</div>
