--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 						<div class="features-box-icon">
 							<span aria-hidden="true" class="icon_profile"></span>
 						</div>
-						<a href="//tianqi.luov.top/">
+						<a href="http://tianqi.luov.top/">
 					    <h3>气象万千 | Weather</h3></a>
 					    <p>一个简单的天气预报网站。<br/>A simple weather forecast website. </p>
 					</div>
