--- a/index.html
+++ b/index.html
@@ -90,17 +90,8 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li>
 								<span class="li-text">
-									<!--Eternal charm, Endless sound.-->
-									<!--2018/11/07 12:12:12<br>
-								戊戌狗年 九月三十 -->
-								</span>
-								<!--<a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=USM_IyY0KBE3Pik8MDg9fzI_PA"><strong>Mail Me</strong></a>-->
-								<!--<span class="li-social">
-								<a href="#"><span class="social_facebook"></span></a>
-								<a href="https://github.com/Rorwey"><span class=""></span></a>
-								<a href="https://github.com/Rorwey"><span class="fa-github"></span></a>
-								<a href="#"><span class="social_skype"></span></a>
-							</span>-->
+									<iframe allowtransparency="true" frameborder="0" width="410" height="98" scrolling="no" src="https://tianqi.2345.com/plugin/widget/index.htm?s=2&z=3&t=1&v=0&d=2&bd=0&k=000000&f=ffffff&ltf=009944&htf=cc0000&q=1&e=1&a=1&c=54511&w=410&h=98&align=center"></iframe>
+								 </span>
 							</li>
 						</ul>
 					</div>
@@ -254,7 +245,30 @@
 		<script src="assets/js/wow.min.js"></script>
 		<script src="assets/js/retina-1.1.0.min.js"></script>
 		<script src="assets/js/scripts.js"></script>
-
+<script>
+WIDGET = {
+  CONFIG: {
+    "modules": "01234",
+    "background": 1,
+    "tmpColor": "FFFFFF",
+    "tmpSize": 16,
+    "cityColor": "FFFFFF",
+    "citySize": 16,
+    "aqiSize": 16,
+    "weatherIconSize": 24,
+    "alertIconSize": 18,
+    "padding": "10px 10px 10px 10px",
+    "shadow": "1",
+    "language": "auto",
+    "borderRadius": 5,
+    "fixed": "false",
+    "vertical": "middle",
+    "horizontal": "center",
+    "key": "F2c7f5en2C"
+  }
+}
+</script>
+<script src="https://apip.weatherdt.com/simple/static/js/weather-simple-common.js?v=2.0"></script>
 		<!--[if lt IE 10]>
             <script src="assets/js/placeholder.js"></script>
         <![endif]-->
