--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li>
 								<span class="li-text">
-									<iframe allowtransparency="true" frameborder="0" width="410" height="98" scrolling="no" src="https://tianqi.2345.com/plugin/widget/index.htm?s=2&z=3&t=1&v=0&d=2&bd=0&k=000000&f=ffffff&ltf=009944&htf=cc0000&q=1&e=1&a=1&c=54511&w=410&h=98&align=center"></iframe>
+									<iframe allowtransparency="true" frameborder="0" width="410" height="98" scrolling="no" src="//tianqi.2345.com/plugin/widget/index.htm?s=2&z=3&t=1&v=0&d=2&bd=0&k=000000&f=ffffff&ltf=009944&htf=cc0000&q=1&e=1&a=1&c=54511&w=410&h=98&align=center"></iframe>
 								 </span>
 							</li>
 						</ul>
