--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								<div class="row">
 									<div class="col-sm-12 features wow fadeIn title">
 										<p><strong>贤柳阁</strong> 和 <strong>Mr.Luo</strong> 迁移到新的域名上，已经过去了：<br />
-											XianliuGe and Mr.Luo are working on the new domain name for: </p>
+											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
 										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
 											<div class="years-wrapper">
 												<span class="years"></span> <span class="t-text">years /</span>
