--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
 									<div class="col-sm-12 features wow fadeIn title">
-										<p><strong>贤柳阁</strong> 和 <strong>Mr.Luo</strong> 迁移到新的域名上，已经过去了：<br />
+										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
 											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
 										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
 											<div class="years-wrapper">
@@ -180,7 +180,7 @@
 							<div class="features-box-icon">
 								<span aria-hidden="true" class="icon_cogs"></span>
 							</div>
-							<h3>Mr.Luo</h3>
+							<h3>罗先生 | Mr.Luo</h3>
 						</a>
 						<p>我的个人社交与信息平台展示窗口。<br />A platform window to showcase my personal social and informational presence.</p>
 					</div>
