--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<span> <a href="/001.html">Last version.</span></a>
 						<br/>
 						<span style="font-size:80%;">赣ICP备<a
-							 href="http://www.miitbeian.gov.cn/">18012283</a>号&nbsp;
+							 href="http://beian.miit.gov.cn/">18012283</a>号&nbsp;
 							<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center"
 							 rel="nofollow">赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163"
 								 style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
