--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 						<a href="https://luov.top" title="Mr.Luo">LuoV</a>, All rights reserved.
 						<span> <a href="/001.html">Last version.</span></a>
 						<br/>
-						<span style="font-size:80%;">赣ICP备<a
+						<!-- <span style="font-size:80%;">赣ICP备<a
 							 href="http://beian.miit.gov.cn/">18012283</a>号&nbsp;
 							<span style="padding-left:25px;background:url(https://s1.ax1x.com/2018/09/29/ilmwIH.png) no-repeat left center"
 							 rel="nofollow">赣公网安备<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=36010202000163"
 								 style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
 									36010202000163</a>号</span></span>
-						</span>
+						</span> -->
 					</div>
 					<div class="myinfo"></div>
 					<div class="myinfo"></div>
