--- a/time.html
+++ b/time.html
@@ -131,7 +131,32 @@
 									今天是星期<span class="week">日</span><span id="lunarInfo"></span>。现在是<span id="lunarTime">子初</span>。
 								</p>
 							</div>
-						
+							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s" display="none">
+								<div class="row">
+									<div class="col-sm-12 features wow fadeIn title">
+										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
+											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
+										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
+											<div class="years-wrapper">
+												<span class="years"></span> <span class="t-text">years /</span>
+											</div>
+											<div class="days-wrapper">
+												<span class="days"></span> <span class="t-text">days /</span>
+											</div>
+											<div class="hours-wrapper">
+												<span class="hours"></span> <span class="t-text">hours /</span>
+											</div>
+											<div class="minutes-wrapper">
+												<span class="minutes"></span> <span class="t-text">minutes /</span>
+											</div>
+											<div class="seconds-wrapper">
+												<span class="seconds"></span> <span class="t-text">seconds</span>
+											</div>
+										</div>
+
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
