--- a/time.html
+++ b/time.html
@@ -132,7 +132,7 @@
 								</p>
 							</div>
 							<div  display="none" class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
-								<div class="row">
+								<div class="row" display="none" >
 									<div class="col-sm-12 features wow fadeIn title">
 										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
 											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
