--- a/time.html
+++ b/time.html
@@ -131,8 +131,8 @@
 									今天是星期<span class="week">日</span><span id="lunarInfo"></span>。现在是<span id="lunarTime">子初</span>。
 								</p>
 							</div>
-							<div class="subscribe wow fadeInUp" display="none" >
-								<div class="row" display="none" >
+							<div class="subscribe wow fadeInUp display:none"  >
+								<div class="row display:none" >
 									<div class="col-sm-12 features wow fadeIn title">
 										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
 											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
