--- a/time.html
+++ b/time.html
@@ -34,7 +34,8 @@
 				s.parentNode.insertBefore(hm, s);
 			})();
 		</script>
-		<script src="https://v1.hitokoto.cn/?c=i&encode=js&select=%23hitokoto" defer></script>
+		<!-- <script src="https://v1.hitokoto.cn/?c=i&encode=js&select=%23hitokoto" defer></script/> -->
+		<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="assets/fonts/googleapis-fonts/fonts.css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -103,7 +104,7 @@
 					<div class="row">
 						<div class="col-sm-12 text">
 							<h1 class="wow fadeInLeftBig" data-wow-duration="1.5s" data-wow-delay="1s">
-								<strong id="hitokoto">一寸光阴一寸金，寸金难买寸光阴</strong>
+								<strong id="content">一寸光阴一寸金，寸金难买寸光阴</strong>
 							</h1>
 							<div class="timer wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="2.5s">
 								<div class="years-wrapper">
@@ -131,28 +132,14 @@
 									今天是星期<span class="week">日</span><span id="lunarInfo"></span>。现在是<span id="lunarTime">子初</span>。
 								</p>
 							</div>
-							<div class="display:none"  >
-								<div class="row display:none" >
-									<div class="">
-										<p><strong>贤柳阁</strong> 和 <strong>罗先生</strong> 迁移到新的域名上，已经过去了：<br />
-											<strong>XianliuGe</strong> and <strong>Mr.Luo</strong> are working on the new domain name for: </p>
-										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s">
-											<div class="years-wrapper">
-												<span class="years"></span> <span class="t-text">years /</span>
-											</div>
-											<div class="days-wrapper">
-												<span class="days"></span> <span class="t-text">days /</span>
-											</div>
-											<div class="hours-wrapper">
-												<span class="hours"></span> <span class="t-text">hours /</span>
-											</div>
-											<div class="minutes-wrapper">
-												<span class="minutes"></span> <span class="t-text">minutes /</span>
-											</div>
-											<div class="seconds-wrapper">
-												<span class="seconds"></span> <span class="t-text">seconds</span>
-											</div>
-										</div>
+							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
+								<div class="row">
+									<div class="col-sm-12 features wow fadeIn title">
+										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s"></div>
+										<p>这句诗来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
+										<p id="main"></p>
+										<p>诗词大意：</p><br />
+										<p id="translate"></p>
 
 									</div>
 								</div>
@@ -165,6 +152,26 @@
 		<!--<div class="copyrights">&copy;<a href="http://luov.top" title="Mr.Luo">LuoV</a></div>-->
 
 		<!-- More info -->
+		<div class="none" style="display: none;">
+					
+						<div class="" data-wow-duration="1.5s" data-wow-delay="4s">
+							<div class="years-wrapper">
+								<span class="years"></span> <span class="t-text">years /</span>
+							</div>
+							<div class="days-wrapper">
+								<span class="days"></span> <span class="t-text">days /</span>
+							</div>
+							<div class="hours-wrapper">
+								<span class="hours"></span> <span class="t-text">hours /</span>
+							</div>
+							<div class="minutes-wrapper">
+								<span class="minutes"></span> <span class="t-text">minutes /</span>
+							</div>
+							<div class="seconds-wrapper">
+								<span class="seconds"></span> <span class="t-text">seconds</span>
+							</div>
+						</div>
+		</div>
 		<div class="features-container section-container">
 			<div class="container">
 				<div class="row">
