--- a/time.html
+++ b/time.html
@@ -255,6 +255,9 @@
 		<script src="assets/js/wow.min.js"></script>
 		<script src="assets/js/retina-1.1.0.min.js"></script>
 		<script src="assets/js/scripts.js"></script>
+		<script>
+		
+		</script>
 <script>
 WIDGET = {
   CONFIG: {
