--- a/time.html
+++ b/time.html
@@ -137,7 +137,7 @@
 									<div class="col-sm-12 features wow fadeIn title">
 										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s"></div>
 										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
-										<p id="main"></p>
+										<p id="mian"></p>
 										<p>诗词大意：</p><br />
 										<p id="translate"></p>
 
