--- a/time.html
+++ b/time.html
@@ -138,7 +138,7 @@
 										<div class="countdown wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="4s"></div>
 										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
 										<p id="mian"></p>
-										<p>诗词大意：</p><br />
+										<p id="tranInfo">诗词大意：</p><br />
 										<p id="translate"></p>
 
 									</div>
