完善多行诗句的展示方案

--- a/time.html
+++ b/time.html
@@ -134,7 +134,7 @@
 							</div>
 							<div class="subscribe wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="3s">
 								<div class="row">
-									<div class="col-sm-12 features wow fadeIn title">
+									<div class="title">
 										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
 										<p id="mian"></p>
 										<p id="tranInfo">诗词大意：</p><br />
