--- a/time.html
+++ b/time.html
@@ -137,6 +137,7 @@
 									<div class="title">
 										<p>这句诗词来自<strong id="pTitle"></strong>,作者是<strong id=author></strong>,全文如下：</p><br />
 										<p id="mian"></p>
+										<div style="height: 30px;"></div>
 										<strong id="tranInfo">诗词大意：</strong><br />
 										<p id="translate"></p>
 
